--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,21 +3,24 @@
     <ion-item>
       <div class="button-bar">
         <a class="button button-positive button-outline" ng-click="showPopup()">Adicionar</a>
-        <a class="button button-assertive button-outline">Excluir</a>
+        <a class="button button-assertive button-outline" ng-click="toggleDelete()">Excluir</a>
       </div>
     </ion-item>
     <div>
-      <ion-list>
-        <li class="item item-toggle" ng-repeat="item in lista">
-          {{item.nome}}
-          <label class="toggle toggle-assertive">
-            <input type="checkbox" ng-model="item.pronto">
-            <div class="track">
-              <div class="handle"></div>
-            </div>
-          </label>
-       </li>
-     </ion-list>
+      <ion-list show-delete="shouldShowDelete">
+          <ion-item class="item-toggle" ng-repeat="item in lista">
+            <ion-delete-button class="ion-minus-circled"></ion-delete-button>
+            <li>
+              {{item.nome}}
+              <label class="toggle toggle-assertive">
+                <input type="checkbox" ng-model="item.pronto">
+                <div class="track">
+                  <div class="handle"></div>
+                </div>
+              </label>
+            </li>
+          </ion-item>
+        </ion-list>
     </div>
   </ion-content>
 </ion-view>
