--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -9,18 +9,19 @@
     <div>
       <ion-list show-delete="shouldShowDelete">
           <ion-item class="item-toggle" ng-repeat="item in lista">
-            <ion-delete-button class="ion-minus-circled"></ion-delete-button>
+            <ion-delete-button class="ion-minus-circled" ng-click="showConfirm(item)"></ion-delete-button>
+            <ion-option-button class="button-positive" ng-click="showPopup(item)">Editar</ion-option-button>
             <li>
-              {{item.nome}}
-              <label class="toggle toggle-assertive">
-                <input type="checkbox" ng-model="item.pronto">
-                <div class="track">
-                  <div class="handle"></div>
-                </div>
-              </label>
-            </li>
-          </ion-item>
-        </ion-list>
-    </div>
-  </ion-content>
+            {{item.nome}}
+            <label class="toggle toggle-assertive">
+              <input type="checkbox" ng-model="item.pronto">
+              <div class="track">
+                <div class="handle"></div>
+              </div>
+            </label>
+          </li>
+        </ion-item>
+      </ion-list>
+  </div>
+</ion-content>
 </ion-view>
